compiler/testData/diagnostics/tests/scopes/Imports-hidden.kt
//FILE:a.kt
package a

import <!USELESS_HIDDEN_IMPORT!>b.O<!>
import c.O

//FILE:b.kt
package b

object O {}

//FILE:c.kt
package c

object O {}
